@@ -10,6 +10,11 @@ What's New in Python 3.3.0 Release Candidate 2?
 Core and Builtins
 -----------------
 
+- Issue #13992: The trashcan mechanism is now thread-safe.  This eliminates
+  sporadic crashes in multi-thread programs when several long deallocator
+  chains ran concurrently and involved subclasses of built-in container
+  types.
+
 - Issue #15784: Modify OSError.__str__() to better distinguish between
   errno error numbers and Windows error numbers.
 
